# xNFT

./: .gitignore  Cargo.toml  README.md
nfts/: Cargo.toml
nfts/src/: lib.rs  types.rs
nfts/src/features/: create_delete_collection.rs  create_delete_item.rs  transfer.rs
pallet-xnft/: Cargo.toml  README.md
pallet-xnft/docs/: multi_nft_transfer.md  single_nft_transfer.md  user_guide.md
pallet-xnft/src/: lib.rs  test.rs
pallet-xnft/src/mock/: mod.rs  para.rs  relay.rs
pallets/pallet-xnft/: Cargo.toml
pallets/pallet-xnft/src/: lib.rs
pallets/pallet-xnft/src/mock/: mod.rs  para.rs  relay.rs
runtime/stout/src/: lib.rs
runtime/trappist/src/: lib.rs
zombienet/: trappist_rococo.toml
